--- a/packages/ui/src/components/Button.astro
+++ b/packages/ui/src/components/Button.astro
@@ -142,7 +142,7 @@ const buttonVariants = cva(
         destructive:
           "bg-destructive text-white shadow-xs hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60",
         outline:
-          "border shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50",
+          "border shadow-xs hover:bg-accent hover:border-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50",
         secondary:
           "bg-secondary text-secondary-foreground hover:bg-secondary/80",
         ghost:
@@ -151,7 +151,7 @@ const buttonVariants = cva(
       },
       size: {
         default: "h-9 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 ",
-        sm: "h-8.5 text-xs rounded-lg gap-1.5 px-3.5 has-[>svg]:px-2.5",
+        sm: "h-8.5 text-sm rounded-lg gap-1.5 px-3 has-[>svg]:px-2",
         lg: "h-10 text-sm rounded-lg px-5 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
         icon: "size-9",
         "icon-sm": "size-8.5",
